--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Clément Rivaille</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>Clément Rivaille</title><link href=/static/css/app.257931526e88b4281a0c87c6f07ad2dc.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.4b3e0239f232247322be.js></script><script type=text/javascript src=/static/js/vendor.d274f9af1274f9823edc.js></script><script type=text/javascript src=/static/js/app.8c67337cc1343afee19d.js></script></body></html>
