fix(title): preload fonts

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>icon.png">
+
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/Arista2.0.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/ATARISTOCRAT.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/Bungee-Regular.otf') %>" type="font/otf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/GeosansLight.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/LeagueSpartan-Bold.otf') %>" type="font/otf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/Oswald-Regular.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/Uroob-Regular.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/Yrsa-SemiBold.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/ComicNeue-Angular-Bold.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/CheltenhamStdBookCond.otf') %>" type="font/otf"
+    crossorigin="anonymous" />
+  <link rel="preload" as="font" href="<%= require ('@/assets/fonts/Born2bSportyV2.ttf') %>" type="font/ttf"
+    crossorigin="anonymous" />
+
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
